2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp:
	  Flipped top/bottom in layers UI to reflect visible stacking.

2006-05-16  verbalshadow  <verbalshadow@gmail.com>

	* src/desktop-style.h, src/desktop-style.cpp:
	  Fixes calligraphy tool so drawing now uses the the correct opacity.

2006-05-17  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
	  Switched icons to stock generic.

2006-05-17  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/dialogs/layers-panel.cpp: Compile fix from Mathieu Dimanche.

2006-05-16  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp:
	  Corrected ordering of children in subset.

2006-05-15  Jon A. Cruz  <jon@joncruz.org>
	* src/Makefile_insert, src/desktop.cpp, src/desktop.h,
	  src/layer-manager.cpp, src/menus-skeleton.h, src/verbs.cpp,
	  src/verbs.h, src/dialogs/layers-panel.cpp,
	  src/dialogs/layers-panel.h, src/dialogs/Makefile_insert:
	  Base implementation of a layers dialog.

2006-05-14  Colin Marquardt  <colin@marquardt-home.de>

	* src/ui/dialog/inkscape-preferences.cpp (initPageTools): 
	  Typofix ("conector").

2006-05-14  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp, src/layer-manager.h, src/layer-manager.cpp:
	  Corrected base structure and avoiding infinite loop.

2006-05-14  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/widgets/toolbox.cpp: Slightly increase size of the
	 connector toolbar buttons to match button sizes on other
	 toolbars.

2006-05-13  verbalshadow  <verbalshadow@gmail.com>

	* src/dyna-draw-context.cpp, src/desktop-style.cpp,
	  src/desktop-style.h:

	  Calligraphy tool now draws in the last used color or the
	  tool style depending on the Preference setting.
	  
2006-05-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/selection-chemistry.cpp, src/sp-conn-end-pair.cpp:

	  When moving/transforming connectors, only detach connectors